fix full bleed image width on desktop

--- a/addon/components/content.css
+++ b/addon/components/content.css
@@ -103,7 +103,7 @@
     img[src$="#full"] {
       margin-left: -3rem;
       margin-right: -3rem;
-      max-width: calc(100% + 6rem);
+      width: calc(100% + 6rem);
     }
   }
 }
